--- a/pch-branch/gcc/cp/ChangeLog
+++ b/pch-branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Geoffrey Keating  <geoffk@redhat.com>
+
+	* decl.c (mark_cp_function_context): Update calling sequence.
+
 2002-02-18  Geoffrey Keating  <geoffk@redhat.com>
 
 	* decl.c (start_function): Don't free 'struct
