* gcc.dg/20020103-1.c: Add rs6000 target and macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50684 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  David Edelsohn  <edelsohn@gnu.org>
+
+        * gcc.dg/20020103-1.c: Add rs6000 target and macro.
+
 2002-03-12  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/20020312-1.c: New test case.
