* gcc.dg/20020103-1.c: Add rs6000 target and macro. 	* gcc.dg/20020103-1.c: Add other -D ppc variants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50685 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-12  David Edelsohn  <edelsohn@gnu.org>
+
+	* gcc.dg/20020103-1.c: Add rs6000 target and macro.
+
+2002-03-12  Aldy Hernandez  <aldyh@redhat.com>
+
+	* gcc.dg/20020103-1.c: Add other -D ppc variants.
+
 2002-03-12  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/20020307-1.c: Use long.
