--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* configure.host (powerpc*-darwin*): Enable interpreter.
+
 2002-03-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* include/posix.h: Add multiple include header protection.
