* c-lex.c (cb_ident, c_lex): Remove unnecessary cast. 	(lex_string): Use unsigned char pointers.
	* gcc.c-torture/execute/wchar_t-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50687 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/wchar_t-1.c: New test.
+
 2002-03-12  David Edelsohn  <edelsohn@gnu.org>
 
 	* gcc.dg/20020103-1.c: Add rs6000 target and macro.
