--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-lex.c (cb_ident, c_lex): Remove unnecessary cast.
+	(lex_string): Use unsigned char pointers.
+
 2002-03-12  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* reload1.c (reload): Ignore MEM REG_EQUIV notes if the equivalent
