* c-lex.h (position_after_whitespace): Remove.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50691 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-12  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-lex.h (position_after_whitespace): Remove.
+
 2002-03-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-lex.c (cb_ident, c_lex): Remove unnecessary cast.
