--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-12  Chris Meyer  <cmeyer@gatan.com>
+
+	* genflags.c (gen_insn): Use IS_VSPACE.
+	* genoutput.c (output_insn_data): Likewise.
+	(process_template): Likewise.
+
 2002-03-12  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.c (xtensa_expand_block_move): Use
@@ -138,12 +144,12 @@ Sat Mar  9 07:20:01 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-03-08  Aldy Hernandez  <aldyh@redhat.com>
 
-        * config/rs6000/rs6000.c (rs6000_va_arg): Fix alignment for
-        vectors.
+	* config/rs6000/rs6000.c (rs6000_va_arg): Fix alignment for
+	vectors.
 
 2002-03-08  Aldy Hernandez  <aldyh@redhat.com>
 
-        * config/rs6000/sysv4.h (BIGGEST_ALIGNMENT): Change for altivec.
+	* config/rs6000/sysv4.h (BIGGEST_ALIGNMENT): Change for altivec.
 
 2002-03-08  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
@@ -177,11 +183,11 @@ Fri Mar  8 06:48:45 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-03-07  Aldy Hernandez  <aldyh@redhat.com>
 
-        * doc/invoke.texi: Add documentation for -mabi=no-altivec.
+	* doc/invoke.texi: Add documentation for -mabi=no-altivec.
 
-        * config/rs6000/rs6000.c (rs6000_parse_abi_options): Add
-        -mabi=no-altivec
-        (alt_reg_names): Remove % for vrsave.
+	* config/rs6000/rs6000.c (rs6000_parse_abi_options): Add
+	-mabi=no-altivec
+	(alt_reg_names): Remove % for vrsave.
 
 2002-03-06  Jeffrey A Law  (law@redhat.com)
 
@@ -246,7 +252,7 @@ Fri Mar  8 06:48:45 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 2002-03-05  Richard Henderson  <rth@redhat.com>
 
-        * config/rs6000/rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.
+	* config/rs6000/rs6000.h (TOTAL_ALTIVEC_REGS): Fix off-by-one error.
 
 2002-03-04  Krister Walfridsson  <cato@df.lth.se>
 
