* c-common.c (c_tree_code_type, c_tree_code_length, 	c_tree_code_name, add_c_tree_codes): Delete. 	* c-common.h (add_c_tree_codes): Delete. 	* c-lang.c (tree_code_type, tree_code_length, tree_code_name): 	Define. 	* c-objc-common.c (c_objc_common_init): Don't call 	add_c_tree_codes, instead set lang_unsafe_for_reeval. 	* objc/objc-act.c (objc_tree_code_type, objc_tree_code_length, 	objc_tree_code_name, add_objc_tree_codes): Delete. 	(objc_init): Don't call add_objc_tree_codes. 	* objc/objc-lang.c (tree_code_type, tree_code_length, 	tree_code_name): Define. 	* toplev.c (lang_independent_init): Don't set 	tree_code_length[IDENTIFIER_NODE]. 	* tree.c (tree_code_type, tree_code_length, tree_code_name): 	Delete definitions, moved to language front-ends. 	* tree.def (IDENTIFIER_NODE): Hardwire the length. 	* tree.h (tree_code_type, tree_code_length, tree_code_name): 	Const-ify. 	(tree_code_length): Change type to unsigned char.
ada:
	* misc.c (gnat_tree_code_type, gnat_tree_code_length,
	gnat_tree_code_name): Delete.
	(tree_code_type, tree_code_length, tree_code_name): Define.
	(gnat_init): Don't try to copy into the various tree_code
	arrays.

ch:
	* decl.c (chill_tree_code_type, chill_tree_code_length,
	chill_tree_code_name): Delete.
	(tree_code_type, tree_code_length, tree_code_name): Define.
	(init_decl_processing): Don't try to copy into the various
	tree_code arrays.

cp:
	* cp-lang.c (tree_code_type, tree_code_length, tree_code_name):
	Define.
	* decl.c (duplicate_decls): Use TREE_CODE_LENGTH, not
	tree_code_length.
	* lex.c (cplus_tree_code_type, cplus_tree_code_length,
	cplus_tree_code_name): Delete.
	(cxx_init): Don't call add_c_tree_codes, instead set
	lang_unsafe_for_reeval.  Don't try to copy into the various
	tree_code arrays.

f:
	* com.c (tree_code_type, tree_code_length, tree_code_name):
	Define.

java:
	* lang.c (java_tree_code_type, java_tree_code_length,
	tree_code_name): Delete.
	(tree_code_type, tree_code_length, tree_code_name): Define.
	(java_init)

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,26 @@
+2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-common.c (c_tree_code_type, c_tree_code_length,
+	c_tree_code_name, add_c_tree_codes): Delete.
+	* c-common.h (add_c_tree_codes): Delete.
+	* c-lang.c (tree_code_type, tree_code_length, tree_code_name):
+	Define.
+	* c-objc-common.c (c_objc_common_init): Don't call
+	add_c_tree_codes, instead set lang_unsafe_for_reeval.
+	* objc/objc-act.c (objc_tree_code_type, objc_tree_code_length,
+	objc_tree_code_name, add_objc_tree_codes): Delete.
+	(objc_init): Don't call add_objc_tree_codes.
+	* objc/objc-lang.c (tree_code_type, tree_code_length,
+	tree_code_name): Define.
+	* toplev.c (lang_independent_init): Don't set
+	tree_code_length[IDENTIFIER_NODE].
+	* tree.c (tree_code_type, tree_code_length, tree_code_name):
+	Delete definitions, moved to language front-ends.
+	* tree.def (IDENTIFIER_NODE): Hardwire the length.
+	* tree.h (tree_code_type, tree_code_length, tree_code_name):
+	Const-ify.
+	(tree_code_length): Change type to unsigned char.
+
 2002-03-12  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/i386.c (ix86_expand_prologue): Revert 2002-03-03
