--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,11 @@
+2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* decl.c (chill_tree_code_type, chill_tree_code_length,
+	chill_tree_code_name): Delete.
+	(tree_code_type, tree_code_length, tree_code_name): Define.
+	(init_decl_processing): Don't try to copy into the various
+	tree_code arrays.
+
 2002-02-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* ch-tree.h, decl.c: Delete traditional-mode-related code
