--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* cp-lang.c (tree_code_type, tree_code_length, tree_code_name):
+	Define.
+	* decl.c (duplicate_decls): Use TREE_CODE_LENGTH, not
+	tree_code_length.
+	* lex.c (cplus_tree_code_type, cplus_tree_code_length,
+	cplus_tree_code_name): Delete.
+	(cxx_init): Don't call add_c_tree_codes, instead set
+	lang_unsafe_for_reeval.  Don't try to copy into the various
+	tree_code arrays.
+
 2002-03-12  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/5659
