2002-03-13  Aldy Hernandez  <aldyh@redhat.com>
        * expmed.c (store_bit_field): Reset alias set for memory.
        (extract_bit_field): Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50706 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-13  Aldy Hernandez  <aldyh@redhat.com>
+
+        * expmed.c (store_bit_field): Reset alias set for memory.
+        (extract_bit_field): Same.
+
 2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* c-common.c (c_tree_code_type, c_tree_code_length,
