--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,7 +1,16 @@
+
 2002-03-12  Loren Rittle  <ljrittle@acm.org>
 
 	reported by Peter Schmid <schmid@snake.iap.physik.tu-darmstadt.de>
 	* testsuite/thread/pthread4.cc: Lower nominal iteration counter.
+
+2002-03-11  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/stl_bvector.h: Fix warning.
+
+2002-03-11  Richard Henderson  <rth@redhat.com>
+
+	* include/bits/stl_bvector.h (_Bit_type): New.  Use throughout.
 
 2002-03-11  Paolo Carlini  <pcarlini@unitus.it>
 
