PR optimization/5892 	* config/ia64/ia64.c (rotate_one_bundle): Update current packet.
	* gcc.c-torture/compile/20020312-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50722 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-13  Jakub Jelinek  <jakub@redhat.com>
 
+	PR optimization/5892
+	* config/ia64/ia64.c (rotate_one_bundle): Update current packet.
+
+2002-03-13  Jakub Jelinek  <jakub@redhat.com>
+
 	* loop.c (basic_induction_var): Don't call convert_modes if mode
 	classes are different.
 
