--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-12  Richard Sandiford  <rsandifo@redhat.com>
 
+	* mangle.c (write_builtin_type): Handle 128-bit integers even if
+	they are not a standard integer type.
+
+2002-03-12  Richard Sandiford  <rsandifo@redhat.com>
+
 	* cp-tree.h (init_init_processing): Remove declaration.
 	* init.c (BI_header_type, init_init_processing): Remove old ABI stuff.
 	* decl.c (cxx_init_decl_processing): Don't call init_init_processing.
