* mangle.c (write_builtin_type): Handle 128-bit integers even if 	they are not a standard integer type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50745 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	* mangle.c (write_builtin_type): Handle 128-bit integers even if
+	they are not a standard integer type.
+
 2002-03-12  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/5659
