--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-14  Geoffrey Keating  <geoffk@redhat.com>
+
+	* configure.in: Don't pass -Wno-long-long to a ADA compiler
+	that doesn't support it.
+	* configure: Regenerate.
+
 2002-03-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/5626
